# Petti

./: .gitignore  README.md  README_en.md  config.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
public/assets/: games.json
src/: App.svelte  Config.svelte  config.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Config.svelte  ConfigBox.svelte  LottieFox.svelte  cat_follow_mouse.riv  plugin.ts
src/lib/components/: Config_Plugin.svelte  Config_Theme.svelte
src/lib/data/: plugin.json
src/lib/plugins/: Meow.ts  Momo.ts  Music.ts  Timer.ts  index.ts
src/lib/stores/: petStore.ts  plugin.ts  themes.ts
