[package]
name = "petti"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "protocol-all",
    "path-all",
    "fs-all",
    "window-start-dragging",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media",
    "Foundation",
    "Media_Control",
]

[dependencies.tokio]
version = "1.39.0"
features = ["full"]

[dependencies.tokio-macros]
version = "1.8.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
